--- a/packages/jsii-reflect/package.json
+++ b/packages/jsii-reflect/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "@jsii/check-node": "0.0.0",
     "@jsii/spec": "^0.0.0",
-    "colors": "^1.4.0",
+    "colors": "1.4.0",
     "fs-extra": "^9.1.0",
     "oo-ascii-tree": "^0.0.0",
     "yargs": "^16.2.0"
