chore: transition from using colors to chalk
The stability and long-term prospects of colors is unclear; remove our
dependency and start using chalk instead.

--- a/packages/jsii/package.json
+++ b/packages/jsii/package.json
@@ -38,7 +38,7 @@
     "@jsii/check-node": "0.0.0",
     "@jsii/spec": "^0.0.0",
     "case": "^1.6.3",
-    "colors": "1.4.0",
+    "chalk": "^4",
     "deep-equal": "^2.0.5",
     "fs-extra": "^9.1.0",
     "log4js": "^6.3.0",
