Build latest superchain instead of using prebuilt image This will assure we get the right image for the branch. Also build faster by ignoring temporary files like python venv and node_modules that the build itself creates.

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,17 @@
 {
     "name": "Dev Container Definition - AWS JSII",
-    "image": "jsii/superchain:1-buster-slim",
+    "build": {
+        "dockerfile": "superchain/Dockerfile",
+        "context": ".",
+        "target": "superchain",
+        "args": {
+            "BUILDPLATFORM": "linux/amd64",
+            "TARGETPLATFORM": "linux/amd64",
+            "BUILD_TIMESTAMP": "unknown",
+            "REGISTRY": "docker.io/library",
+            "COMMIT_ID": "head"
+        }
+    },
     "postCreateCommand": "yarn install && yarn build",
     "extensions": [
         "dbaeumer.vscode-eslint@2.1.5"
