Run as root and avoid: error An unexpected error occurred: "EPERM: operation not permitted, chmod '/workspaces/jsii/packages/@jsii/dotnet-runtime/node_modules/.bin/jsii-runtime'".

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -12,6 +12,8 @@
             "COMMIT_ID": "head"
         }
     },
+    "containerUser": "root",
+    "remoteUser": "root",
     "postCreateCommand": "yarn install && yarn build",
     "extensions": [
         "dbaeumer.vscode-eslint@2.1.5"
