Try to be dependency-has-protocol-friendly

--- a/packages/@jsii/python-runtime/mypy.ini
+++ b/packages/@jsii/python-runtime/mypy.ini
@@ -1,2 +1,13 @@
 [mypy]
+disallow_untyped_decorators = True
+pretty = True
+python_version = 3.6
+warn_unused_configs = True
+warn_unused_ignores = True
+warn_unreachable = True
+
+[mypy-setuptools]
+ignore_missing_imports = True
+
+[mypy-importlib_resources]
 ignore_missing_imports = True
