--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -14,8 +14,7 @@ jobs:
   auto-approve:
     if: contains(github.event.pull_request.labels.*.name, 'auto-approve')
     permissions:
-      actions: write
-      issues: write
+      contents: write
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
@@ -28,4 +27,4 @@ jobs:
     - run: gh pr review --approve ${{ github.event.pull_request.number }} --body "@dependabot squash and merge" -R ${{ github.repository }}
       if: github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.user.login == 'dependabot-preview[bot]'
       env:
-        GITHUB_TOKEN: ${{ secrets.AUTO_APPROVE_GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
