--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -14,6 +14,7 @@ jobs:
   auto-approve:
     if: contains(github.event.pull_request.labels.*.name, 'auto-approve')
     permissions:
+      actions: write
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
