chore: remove dependabot-specific auto-approve
Let mergify do the work.

--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -1,4 +1,4 @@
-# Approve PRs with "auto-approve". mergify or dependabot takes care of the actual merge.
+# Approve PRs with "auto-approve". mergify takes care of the actual merge.
 
 name: auto-approve
 on:
@@ -18,13 +18,6 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-    # This is not a dependabot PR so we'll simply approve it
     - run: gh pr review --approve ${{ github.event.pull_request.number }} -R ${{ github.repository }}
-      if: github.event.pull_request.user.login != 'dependabot[bot]' && github.event.pull_request.user.login != 'dependabot-preview[bot]'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    # This is a dependabot PR, so we'll also comment "@dependabot squash and merge"
-    - run: gh pr review --approve ${{ github.event.pull_request.number }} --body "@dependabot squash and merge" -R ${{ github.repository }}
-      if: github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.user.login == 'dependabot-preview[bot]'
-      env:
-        GITHUB_TOKEN: ${{ secrets.AUTO_APPROVE_GITHUB_TOKEN }}
