--- a/superchain/Dockerfile
+++ b/superchain/Dockerfile
@@ -120,7 +120,6 @@ RUN apt-get update                                                              
   sudo                                                                                                                  \
   unzip                                                                                                                 \
   zip                                                                                                                   \
-  wget                                                                                                                  \
   && rm -rf /var/lib/apt/lists/*
 
 # Install mono
@@ -209,7 +208,7 @@ RUN apt-key add /tmp/nodesource.asc && rm /tmp/nodesource.asc                   
 
 # Install SAM CLI
 ARG SAM_CLI_SOURCE="https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip"
-RUN wget -O /tmp/aws-sam-cli-linux-x86_64.zip ${SAM_CLI_SOURCE}                                                         \
+RUN curl -L -o /tmp/aws-sam-cli-linux-x86_64.zip ${SAM_CLI_SOURCE}                                                      \
   && unzip /tmp/aws-sam-cli-linux-x86_64.zip -d /tmp/sam-installation                                                   \
   && sudo ./tmp/sam-installation/install                                                                                \
   && rm -rf /tmp/aws-sam-cli-linux-x86_64.zip /tmp/sam-installation                                                     \
