use pip to install sam cli to fix the installation issue in linux/arm

--- a/superchain/Dockerfile
+++ b/superchain/Dockerfile
@@ -207,11 +207,7 @@ RUN apt-key add /tmp/nodesource.asc && rm /tmp/nodesource.asc                   
   && rm -rf /var/lib/apt/lists/*
 
 # Install SAM CLI
-ARG SAM_CLI_SOURCE="https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip"
-RUN curl -fSsL ${SAM_CLI_SOURCE} -o aws-sam-cli-linux-x86_64.zip                                                        \
-  && unzip -qq aws-sam-cli-linux-x86_64.zip -d sam-installation                                                         \
-  && sudo ./sam-installation/install                                                                                    \
-  && rm -rf aws-sam-cli-linux-x86_64.zip sam-installation                                                               \
+RUN pip install aws-sam-cli                                                                                             \
   && sam --version
 
 # Install some configuration
