chore: add mmogylenko and z3r0w0n for bug report
They drew attention to what eventually prompted:
https://github.com/aws/jsii/pull/3409

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1321,6 +1321,24 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "mmogylenko",
+      "name": "Mykola Mogylenko",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7536624?v=4",
+      "profile": "https://github.com/mmogylenko",
+      "contributions": [
+        "bug"
+      ]
+    },
+    {
+      "login": "z3r0w0n",
+      "name": "Kaushik Borra",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6740347?v=4",
+      "profile": "https://github.com/z3r0w0n",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "repoType": "github",
