chore: udpate github token used in workflows

--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - run: gh pr edit ${{ github.event.pull_request.number }} --add-label "auto-approve" -R ${{ github.repository }}
       env:
-        GITHUB_TOKEN: ${{ secrets.AUTO_APPROVE_GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
