--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: gh-pages
-          token: ${{ secrets.AUTO_APPROVE_GITHUB_TOKEN }}
+          token: ${{ secrets.PROJEN_GITHUB_TOKEN }}
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
