--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -143,5 +143,5 @@ jobs:
           labels: contribution/core,dependencies,auto-approve
           team-reviewers: aws-cdk-team
           # Privileged token so automated PR validation happens
-          token: ${{ secrets.AUTO_APPROVE_GITHUB_TOKEN }}
+          token: ${{ secrets.PROJEN_GITHUB_TOKEN }}
 
