chore: restrict .substr() usage via ESLint rule
Signed-off-by: Tobias Speicher <rootcommander@gmail.com>

--- a/eslint-config.yaml
+++ b/eslint-config.yaml
@@ -205,6 +205,7 @@ rules:
 
   'no-restricted-properties':
     - error
+    - { property: "substr", message: "Use .slice instead of .substr." }
 
   'no-return-await':
     - error
