perf: cache package.json and .jsiirc file lookup
JSII loads `package.json` and `.jsiirc` file multiple times in the compilation
process. These files are loaded from disk everytime and are expensive operation.
Updated the code to cache the file in memort by memoizing the load file calls.

With this change the compilation time for `aws-cdk-lib` module came from 133 seccond
to 101 second

--- a/packages/jsii/package.json
+++ b/packages/jsii/package.json
@@ -41,6 +41,7 @@
     "chalk": "^4",
     "deep-equal": "^2.0.5",
     "fs-extra": "^9.1.0",
+    "lodash": "^4.17.21",
     "log4js": "^6.4.4",
     "semver": "^7.3.5",
     "semver-intersect": "^1.4.0",
@@ -62,6 +63,7 @@
     "jest-expect-message": "^1.0.2",
     "jsii-build-tools": "^0.0.0",
     "prettier": "^2.6.1",
-    "ts-jest": "^27.1.4"
+    "ts-jest": "^27.1.4",
+    "@types/lodash": "^4.14.151"
   }
 }
