Remove build directory left behind by pip

--- a/packages/@jsii/python-runtime/.gitignore
+++ b/packages/@jsii/python-runtime/.gitignore
@@ -12,6 +12,7 @@ __pycache__
 .mypy_cache
 .pytest_cache
 
-build
+# Occasionally left behind by pip, transient (safe to delete)
+build/
 
 README.md
