--- a/packages/@jsii/python-runtime/pyproject.toml
+++ b/packages/@jsii/python-runtime/pyproject.toml
@@ -1,12 +1,11 @@
 [build-system]
-requires = [
-  "pip~=20.2",
-  "setuptools~=50.3",
-  "wheel~=0.35",
-]
+requires = ["pip~=20.2", "setuptools~=50.3", "wheel~=0.35"]
 build-backend = 'setuptools.build_meta'
 
 [tool.black]
 target-version = ['py36', 'py37', 'py38']
 include = '\.pyi?$'
 exclude = '\.(git|mypy_cache|env)'
+
+[tool.mypy]
+ignore_missing_imports = true
