--- a/packages/@jsii/python-runtime/pyproject.toml
+++ b/packages/@jsii/python-runtime/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["pip~=20.2", "setuptools~=50.3", "wheel~=0.35"]
+requires = ["pip~=22.0", "setuptools~=62.1", "wheel~=0.37"]
 build-backend = 'setuptools.build_meta'
 
 [tool.black]
-target-version = ['py36', 'py37', 'py38']
+target-version = ['py37', 'py38', 'py39', 'py310']
 include = '\.pyi?$'
 exclude = '\.(git|mypy_cache|env)'
 
