--- a/packages/jsii-pacmak/lib/targets/python/requirements-dev.txt
+++ b/packages/jsii-pacmak/lib/targets/python/requirements-dev.txt
@@ -3,8 +3,7 @@
 # be installed in the virtual environment used for building the distribution
 # package (wheel, sdist), but not declared as build-system dependencies.
 
-setuptools~=59.6.0 # build-system
+setuptools~=62.1.0 # build-system
 wheel~=0.37.1      # build-system
 
-twine~=3.8.0 ; python_version < '3.7'
-twine~=4.0.0 ; python_version >= '3.7'
+twine~=4.0.0
