chore: automated node runtime deprecation warnings
This changes how the node release support information is modeled so that
the end-of-life dates are configured, so that `@jsii/check-node` can
automatically start warning a month ahead of a runtime's EOL date, so we
can drop support right on EOL day if needed wihtout taking users by
surprise.

This also includes tweaks of the messages that get printed out to STDERR
when an unsupported/untested/deprecated/end-of-life version is being
used, to increase clarity of provide more information about migration
options.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -215,7 +215,12 @@ jobs:
         dotnet: ['3.1.x']
         go: ['1.16']
         java: ['8']
-        node: ['12', '14', '16', '17']
+        node:
+          - '12' # EOL 2022-04-30
+          - '14' # EOL 2023-04-30
+          - '16' # EOL 2024-04-30
+          - '17' # EOL 2022-06-01
+          - '18' # EOL 2025-04-30
         os: [ubuntu-latest]
         python: ['3.7']
         # Add specific combinations to be tested against "node 12" (to restrict cardinality)
