--- a/packages/jsii/package.json
+++ b/packages/jsii/package.json
@@ -40,6 +40,7 @@
     "case": "^1.6.3",
     "chalk": "^4",
     "deep-equal": "^2.0.5",
+    "downlevel-dts": "^0.10.0",
     "fs-extra": "^9.1.0",
     "log4js": "^6.4.5",
     "semver": "^7.3.7",
