add pr comment workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -360,7 +360,6 @@ jobs:
             && echo "Untracked files: ${untracked:-<none>}"                     \
             && test -z "${untracked}"
         shell: bash
-
   benchmark:
     name: Run compiler benchmark suite
     runs-on: ubuntu-latest
@@ -390,19 +389,12 @@ jobs:
         run: |-
           cd packages/jsii
           yarn bench | tee output.txt
-      - name: Download previous benchmark data
-        uses: actions/cache@v1
-        with:
-          path: ./cache
-          key: ${{ runner.os }}-benchmark
       - name: Store Benchmark Results
         uses: benchmark-action/github-action-benchmark@v1
         with:
-          # What benchmark tool the output.txt came from
           tool: 'benchmarkjs'
-          # Where the output from the benchmark tool is stored
-          output-file-path: output.txt
-          # Where the previous data file is stored
-          external-data-json-path: ./cache/benchmark-data.json
-          # Workflow will fail when an alert happens
+          output-file-path: packages/jsii/output.txt
+          comment-always: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           fail-on-alert: true
+          auto-push: false
