add write permissions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -363,6 +363,8 @@ jobs:
   benchmark:
     name: Run compiler benchmark suite
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     needs: build
     steps:
       # Check out the code
