--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -400,4 +400,4 @@ jobs:
           comment-always: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           fail-on-alert: true
-          auto-push: true
+          auto-push: false
