--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -393,14 +393,14 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Run Benchmark
         working-directory: packages/@jsii/benchmarks
-        run: yarn bench | tee ${{ runner.temp }}/bench-output.txt
+        run: yarn bench --output ${{ runner.temp }}/bench-output.json
       - name: Compare Benchmark Results
         if: github.event_name == 'pull_request'
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: JSII Benchmark Regression
-          tool: 'benchmarkjs'
-          output-file-path: ${{ runner.temp }}/bench-output.txt
+          tool: 'customSmallerIsBetter'
+          output-file-path: ${{ runner.temp }}/bench-output.json
           comment-always: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           fail-on-alert: true
@@ -409,7 +409,7 @@ jobs:
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: JSII Benchmark
-          tool: 'benchmarkjs'
-          output-file-path: ${{ runner.temp }}/bench-output.txt
+          tool: 'customSmallerIsBetter'
+          output-file-path: ${{ runner.temp }}/bench-output.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: true
