--- a/.gitattributes
+++ b/.gitattributes
@@ -15,5 +15,5 @@
 # Github Linguist configuration (https://github.com/github/linguist)
 yarn.lock linguist-generated
 *.snap    linguist-generated
-packages/@jsii/fixtures/** linguist-generated
+packages/@jsii/benchmarks/fixtures/** linguist-generated
 docs/**   linguist-documentation
