--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-node_modules/
-lerna-debug.log
-pip-wheel-metadata/
-tsconfig.tsbuildinfo
-.DS_Store
-.idea
-.vs
-dist/
-.vscode
-*.tsbuildinfo
-*.tabl.json
-*.swp
-*.snk
+.idea/
+.turbo/
+.vs/
+.vscode/
 build/
 coverage/
+dist/
 jsii-outdir/
+node_modules/
+pip-wheel-metadata/
+
+.DS_Store
+*.snk
+*.swp
+*.tabl.json
+*.tsbuildinfo
