--- a/.mergify/config.yml
+++ b/.mergify/config.yml
@@ -51,7 +51,7 @@ pull_request_rules:
       - '#approved-reviews-by>=1'
       - '#review-requested=0'
       - '#changes-requested-reviews-by=0'
-      - status-success=Semantic Pull Request
+      - status-success=Validate PR Title
       # Docker image validation
       - status-success~=^jsii/superchain
       # One test for each OS
@@ -102,7 +102,7 @@ pull_request_rules:
       - '#approved-reviews-by>=1'
       - '#review-requested=0'
       - '#changes-requested-reviews-by=0'
-      - status-success=Semantic Pull Request
+      - status-success=Validate PR Title
       # Docker image validation
       - status-success~=^jsii/superchain
       # One test for each OS
@@ -153,7 +153,7 @@ pull_request_rules:
       - '#approved-reviews-by>=1'
       - '#review-requested=0'
       - '#changes-requested-reviews-by=0'
-      - status-success=Semantic Pull Request
+      - status-success=Validate PR Title
       # Docker image validation
       - status-success~=^jsii/superchain
       # One test for each OS
@@ -210,4 +210,4 @@ pull_request_rules:
 
           [Conventional Commits]: https://www.conventionalcommits.org
     conditions:
-      - status-failure=Semantic Pull Request
+      - status-failure=Validate PR Title
